# Stratus

./: .gitignore  README.md  app.py  classes.py  database.db  pyproject.toml
.github/workflows/: codeql.yml
pages/: aprimon.html  index.html  navbar.html  navigation.html
static/scripts/: aprimon.js  login_manager.js
static/style/: aprimon.css  main.css  navigation.css
utility_scripts/: encrypt.py
